Add Software Development to personal introduction
Updated the introduction to include Software Development.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-12 hero-text-image">
           <div class="row">
             <div class="col-lg-8 text-center text-lg-start">
-              <h1 data-aos="fade-right">Break into<br> the world of cyber security<br> <i style="font-size:20px ;">MICHAEL ABIODUN</i></h1>
+              <h1 data-aos="fade-right">Break into<br> the world of cyber security<br>and <br> Software Development <i style="font-size:20px ;">MICHAEL ABIODUN</i></h1>
               <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Next 12 Hours:<br>Get 100% off using my promote code</p>
               <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Book a 1-on-1 Call</a></p>
             </div>
@@ -146,7 +146,7 @@
           </div>
           <div class="col-md-4 me-auto">
             <h2 class="mb-4">WHO I AM</h2>
-            <p class="mb-4">My name MICHAEL ABIODUN - I'm an IT / Cyber Security professional.
+            <p class="mb-4">My name MICHAEL ABIODUN - I'm an IT / Cyber Security professional and Software Developer.
               Currently serving as a vCISO for Appalachia Technologies, I've had my hands in many different sectors of the
                security industry. From desktop support, my journey has included working in systems admin, network admin,
                 IT consulting, defensive security, offensive security, GRC (Governance, Risk, and Compliance) and founding
