--- a/features.html
+++ b/features.html
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 me-auto">
-            <h2 class="mb-4">CyberSecurity</h2>
+            <h2 class="mb-4">Software Development</h2>
             <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio, laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt dolore mollitia esse natus beatae.</p>
             <p><a href="#">Read More</a></p>
           </div>
@@ -104,7 +104,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 ms-auto order-2">
-            <h2 class="mb-4">Data Analysis</h2>
+            <h2 class="mb-4">CyberSecurity</h2>
             <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio, laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt dolore mollitia esse natus beatae.</p>
             <p><a href="#">Read More</a></p>
           </div>
