Fix line breaks in hero heading

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-12 hero-text-image">
           <div class="row">
             <div class="col-lg-8 text-center text-lg-start">
-              <h1 data-aos="fade-right">Break into<br> the world of cyber security<br>and <br> Software Development <i style="font-size:20px ;">MICHAEL ABIODUN</i></h1>
+              <h1 data-aos="fade-right">Break into<br> the world of cyber security<br>and <br> Software Development <br><i style="font-size:20px ;">MICHAEL ABIODUN</i></h1>
               <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Next 12 Hours:<br>Get 100% off using my promote code</p>
               <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Book a 1-on-1 Call</a></p>
             </div>
