--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1><a href="index.html">Portfolio</a></h1>
+        <h1><a href="index.html">Michael Abiodun</a></h1>
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
 
